Thu Apr 17 10:03:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#copy_entry): update rdoc about
	  preserve option and permissions, following r31123.
	  [ruby-core:62065] [Bug #9748]

Wed Apr 16 23:47:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (dont_recycle_block_arg): fix condition to recycle block
	  argument.  lambda with rest can get internal array directly.
	  [ruby-core:62060] [Bug #9749]

Wed Apr 16 09:51:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_pkey.c (ossl_pkey_verify): as EVP_VerifyFinal()
	  finalizes only a copy of the digest context, the context must be
	  cleaned up after initialization by EVP_MD_CTX_cleanup() or a
	  memory leak will occur.  [ruby-core:62038] [Bug #9743]

Tue Apr 15 19:36:42 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (rb_w32_cmdvector): removed.

	* win32/win32.c (rb_w32_sysinit): use WCHAR version of GetCommandLine()
	  internally.

	* win32/win32.c (w32_cmdvector): renamed from rb_w32_cmdvector.  use
	  WCHAR* instead of char* internally.

	these changes are expected to not changing the behavior yet.

Tue Apr 15 19:26:05 2014  Tanaka Akira  <akr@fsij.org>

	* ext/extmk.rb: Re-generate extmk.mk and dummy makefiles only if
	  really required.
	  This fixes a problem to run multiple test-all concurrently as:
	  make test-all & make test-all & make test-all & ...

Tue Apr 15 12:49:53 2014  Sam Rawlins  <sam.rawlins@gmail.com>

	* enum.c (enum_each_slice, enum_each_cons): make more efficient by
	  allocating less and recycling block argument arrays if possible.
	  [Fixes GH-596]

Mon Apr 14 18:44:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): get base addrs in fill_lines to use it
	  with dladdr_fbases introduced at r45563.
	  it didn't get before if the executable is not pie.

Mon Apr 14 18:05:48 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (main_exe_path): support FreeBSD.